[gd_scene load_steps=19 format=3 uid="uid://df3h0jfmxyb7c"]

[ext_resource type="Texture2D" uid="uid://8ur2bw67jsde" path="res://Art/World/straight_left.png" id="1"]
[ext_resource type="Texture2D" uid="uid://ctkfhh0b3m8ur" path="res://Art/World/calm_water.png" id="3"]
[ext_resource type="Script" path="res://Strip.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://b022vu8o18uyq" path="res://Art/World/Trees/tree.png" id="5_khie3"]
[ext_resource type="Texture2D" uid="uid://cxqvwuf0b76nf" path="res://Art/World/straight_right.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cqbk4gs434c1f" path="res://Art/World/Trees/tree_red_berries.png" id="6_y8ue7"]
[ext_resource type="Texture2D" uid="uid://b4y7fwljrsyd6" path="res://Art/World/Trees/tree_blue_berries.png" id="7_qk74y"]
[ext_resource type="Texture2D" uid="uid://cj2eoam5ff8kl" path="res://Art/World/Trees/tree_purple_berries.png" id="8_foui3"]
[ext_resource type="Texture2D" uid="uid://cpunexcg2ic2" path="res://Art/World/Trees/fall_transition_tree1.png" id="9_12psd"]
[ext_resource type="Texture2D" uid="uid://cjc84njj6edxc" path="res://Art/World/Trees/fall_transition_tree2.png" id="10_xqedg"]
[ext_resource type="Texture2D" uid="uid://8sgwe50h8dww" path="res://Art/World/Trees/fall_tree.png" id="11_bfqo3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_whjpg"]
texture = ExtResource("3")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true

[sub_resource type="TileSet" id="6"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_whjpg")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_svbe5"]
texture = ExtResource("6")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -24, 8, -24, -16, -32, -32, -16, -32, -16, 32)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 24, 8, 24, -16, 32, -32, 16, -32, 16, 32)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -24, -8, -24, 16, -32, 32, -16, 32, -16, -32)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 24, -8, 24, 16, 32, 32, 16, 32, 16, -32)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 8, -24, -16, -24, -32, -32, -32, -16, 32, -16)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -8, -24, 16, -24, 32, -32, 32, -16, -32, -16)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 8, 24, -16, 24, -32, 32, -32, 16, 32, 16)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -8, 24, 16, 24, 32, 32, 32, 16, -32, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y6bs3"]
texture = ExtResource("1")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 24, -16, 24, 8, 32, 32, 16, 32, 16, -32)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -24, -16, -24, 8, -32, 32, -16, 32, -16, -32)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 24, 16, 24, -8, 32, -32, 16, -32, 16, 32)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -24, 16, -24, -8, -32, -32, -16, -32, -16, 32)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -16, 24, 8, 24, 32, 32, 32, 16, -32, 16)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 16, 24, -8, 24, -32, 32, -32, 16, 32, 16)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -16, -24, 8, -24, 32, -32, 32, -16, -32, -16)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 16, -24, -8, -24, -32, -32, -32, -16, 32, -16)

[sub_resource type="TileSet" id="3"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_svbe5")
sources/1 = SubResource("TileSetAtlasSource_y6bs3")

[sub_resource type="SpriteFrames" id="SpriteFrames_g3wux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("6_y8ue7")
}, {
"duration": 1.0,
"texture": ExtResource("6_y8ue7")
}, {
"duration": 1.0,
"texture": ExtResource("7_qk74y")
}, {
"duration": 1.0,
"texture": ExtResource("8_foui3")
}, {
"duration": 1.0,
"texture": ExtResource("9_12psd")
}, {
"duration": 1.0,
"texture": ExtResource("10_xqedg")
}, {
"duration": 1.0,
"texture": ExtResource("11_bfqo3")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2e5va"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("5_khie3")
}, {
"duration": 1.0,
"texture": ExtResource("6_y8ue7")
}, {
"duration": 1.0,
"texture": ExtResource("6_y8ue7")
}, {
"duration": 1.0,
"texture": ExtResource("7_qk74y")
}, {
"duration": 1.0,
"texture": ExtResource("8_foui3")
}, {
"duration": 1.0,
"texture": ExtResource("9_12psd")
}, {
"duration": 1.0,
"texture": ExtResource("10_xqedg")
}, {
"duration": 1.0,
"texture": ExtResource("11_bfqo3")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Strip" type="Node2D"]
script = ExtResource("4")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(192, 90)
scale = Vector2(19.2, 9.30177)

[node name="Water" type="TileMap" parent="."]
tile_set = SubResource("6")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0)

[node name="Land" type="TileMap" parent="."]
tile_set = SubResource("3")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 1, 0, -65531, 0, 0, 0, 1, 0, 5, 0, 0)

[node name="LeftTree" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
texture_filter = 1
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_g3wux")

[node name="RightTree" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
texture_filter = 1
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_2e5va")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
